stupid.css
/* ... */
header, footer {with:100%}

@media (max-width:599px) {
  h1{font-size:2em}
  h2{font-size:1.8em}
  h3{font-size:1.6em}
  h4{font-size:1.4em}
  h5{font-size:1.2em}
  h6{font-size:1.0em}
}

/*** buttons ***/
.btn, button, [type=button], [type=submit] {padding:0.5em 1em !important; margin:0 0.5em 0.5em 0; line-height:2.4em; background-color:#26a69a; color:white}
.btn:hover, button:hover, [type=button]:hover, [type=submit]:hover {box-shadow:0 0 10px #666; text-decoration:none; cursor:pointer}
.btn.small, table .btn {padding:0.25em 0.5em !important; font-size:0.8em; line-height:1.5em}
.btn.large {padding:1em 2em !important; font-size:1.2em; line-height:3em}
.btn.oval {border-radius:50%}

/*** helpers ***/
.rounded {-moz-border-radius:5px; border-radius:5px}
.padded {padding:10px 20px !important; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box}
.center {text-align:center !important; margin-left:auto; margin-right:auto}
.center>div {text-align:left}
.right {right:0; text-align:right}
.middle div {vertical-align:middle !important}
.bottom div {vertical-align:bottom !important}
.xscroll {overflow-x:scroll; width:100%}
.yscroll {overflow-y:scroll; width:100%}
.nowrap {white-space:nowrap; overflow-x:hidden}
.fill {width:100%}
.lifted {box-shadow:5px 5px 10px #666}
.relative {position:relative}
.relative>div {position:absolute}
.spaced {margin-bottom:20px; margin-top:20px}
.hidden {display:none}

/*** forms ***/
input:not([type]), input:not([type=checkbox]):not([type=radio]):not([type=submit]), [type=file]:before {outline:none; padding:0.5em 1em; margin:0.5px; border-bottom:1px solid #ddd; width:100%}
textarea {width:100%; border:1px solid #ddd; padding:4px 8px; outline:none; outline:none}
select {-webkit-appearance:none; outline:none; padding:0.5em 1em; border-radius:0; margin:0.5px; border-bottom:1px solid #ddd}
input, textarea, select, button {font-size:12px}
input:not([type]), input:not([type=checkbox]):not([type=radio]):not([type=submit]):hover, select:hover, textarea:hover {background-color:#fbf6d9; transition:background-color 1s ease}

/*** grid ***/
.container {margin-right:-20px}
.container>.quarter, .container>.half, .container>.third, .container>.twothirds, .container>.threequarters, .container>.fill{display:inline-block; padding:5px 20px 5px 0; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box; vertical-align:top}
.container>.fill {width:100%; margin-right:-20px}
.container img, .container video {max-width:100%}
@media (min-width:800px) {
  .max900 {max-width:900px; margin-left:auto; margin-right:auto}
  .quarter {width:25%; margin-right:-5px}
  .half {width:50%; margin-right:-10px}
  .third {width:33.33%; margin-right:-6.66px}
  .twothirds {width:66.66%; margin-right:-13.33px}
  .threequarters {width:75%; margin-right:-15px}
}
@media (min-width:600px) and (max-width:799px) {
  .quarter.compressible {width:25%; margin-right:-5px}
  .half.compressible {width:50%; margin-right:-10px}
  .threequarters.compressible {width:75%; margin-right:-15px}
  .quarter:not(.compressible), .half:not(.compressible), .threequarters:not(.compressible) {width:100%; margin-right:-20px}
  .third {width:33.33%; margin-right:-6.66px}
  .twothirds {width:66.66%; margin-right:-13.33px}
  label.quarter:not(.compressible).right, label.half:not(.compressible).right, label.threequarters:not(.compressible).right   {float:left; text-align:left}
}
@media (max-width:599px) {  
  .quarter:not(.compressible), .half:not(.compressible), .third:not(.compressible), .twothirds:not(.compressible), .threequarters:not(.compressible) {width:100%;}
  label.quarter:not(.compressible).right, label.half:not(.compressible).right, label.threequarters:not(.compressible).right,
  label.third:not(.compressible).right, label.twothirds:not(.compressible).right   {float:left; text-align:left}
  .quarter.compressible {width:25%; margin-right:-5px}
  .half.compressible {width:50%; margin-right:-10px}
  .third.compressible {width:33.33%; margin-right:-6.66px}
  .twothirds.compressible {width:66.66%; margin-right:-13.33px}
  .threequarters.compressible {width:75%; margin-right:-15px}
}

/*** progress bar from http://codepen.io/holdencreative/details/pvxGxy  ***/
.progress {
  margin-left:-15px;
  margin-right:-15px;
  position:relative;
  height:8px;
  display:block;
  width:120%;
  background-color:#acece6;
  border-radius:0 !important;
  background-clip:padding-box;
  overflow:hidden;
}
.progress .determinate {
  position:absolute;
  background-color:inherit;
  top:0;
  bottom:0;
  background-color:#26a69a;
  transition:width .3s linear;
}
.progress .indeterminate {
  background-color:#26a69a;
}
.progress .indeterminate:before {
  content:'';
  position:absolute;
  background-color:inherit;
  top:0;
  left:0;
  bottom:0;
  will-change:left, right;
  animation:indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
}
.progress .indeterminate:after {
  content:'';
  position:absolute;
  background-color:inherit;
  top:0;
  left:0;
  bottom:0;
  will-change:left, right;
  animation:indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
  animation-delay:1.15s;
}
@-webkit-keyframes indeterminate {
  0% {left:-35%; right:100%}
  60% {left:100%; right:-90%}
  100% {left:100%; right:-90%}
}
@-moz-keyframes indeterminate {
  0% {left:-35%; right:100%}
  60% {left:100%; right:-90%}
  100% {left:100%; right:-90%}
}
@keyframes indeterminate {
  0% {left:-35%; right:100%}
  60% {left:100%; right:-90%}
  100% {left:100%; right:-90%}
}
@-webkit-keyframes indeterminate-short {
  0% {left:-200%; right:100%}
  60% {left:107%; right:-8%}
  100% {left:107%; right:-8%}
}
@-moz-keyframes indeterminate-short {
  0% {left:-200%; right:100%}
  60% {left:107%; right:-8%}
  100% {left:107%; right:-8%}
}
@keyframes indeterminate-short {
  0% {left:-200%; right:100%}
  60% {left:107%; right:-8%}
  100% {left:107%; right:-8%}
}
/* ... */

